server/k8s/production/gcp/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enigma-ingress
  namespace: enigma
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - enigma-api.shreedev.space
      secretName: enigma-api-tls
  rules:
    - host: enigma-api.shreedev.space
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
          - path: /grafana/?(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
